force-app/main/default/objects/Workflow_Step_Result__c/Workflow_Step_Result__c.object-meta.xml
<CustomObject>
    <label>Workflow Step Result</label>
    <pluralLabel>Workflow Step Results</pluralLabel>
    <nameField>
        <label>Step Result Number</label>
        <displayFormat>SR-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>One row per step execution with values, actor, timestamps, and outcome.</description>
</CustomObject>