force-app/main/default/objects/Workflow_Step_Result__c/fields/Actor_Type__c.field-meta.xml
<CustomField>
    <fullName>Actor_Type__c</fullName>
    <label>Actor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human</fullName>
                <default>true</default>
                <label>Human</label>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>