force-app/main/default/objects/Workflow_Step_Result__c/fields/Actor_User__c.field-meta.xml
<CustomField>
    <fullName>Actor_User__c</fullName>
    <label>Actor User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Step Results as Actor</relationshipLabel>
    <relationshipName>Step_Results_Actor</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>