force-app/main/default/objects/Workflow_Step_Result__c/fields/External_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Source__c</fullName>
    <label>External Source</label>
    <type>Text</type>
    <length>255</length>
</CustomField>