force-app/main/default/objects/Workflow_Step_Result__c/fields/Migration_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Batch_Id__c</fullName>
    <label>Migration Batch Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>